--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -42,6 +42,15 @@ button {
 	background-color: #f3dec9;
 	color: black;
 }
+.upvote {
+	background: none;
+	border: none;
+	cursor: pointer;
+	border: 1px solid #72420e;
+	border-radius: 100%;
+	aspect-ratio: 1/1;
+	padding: 0.2rem;
+}
 
 .wrapper {
 	padding: 1rem;
