--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=IBM+Plex+Sans+Thai+Looped:wght@400;700&family=Space+Grotesk:wght@400;700&display=swap');
 
 * {
 	margin: 0;
 	padding: 0;
 
-	font-family: 'Space Grotesk', sans-serif;
+	font-family: 'Space Grotesk', 'IBM Plex Sans Thai Looped', sans-serif;
 }
 
 .fancy {
