--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,7 +3,7 @@
 html,
 body {
 	overflow-x: hidden;
-	background-color: #f5dcc3;
+	background-color: #fff4ea;
 }
 
 * {
@@ -42,6 +42,8 @@ button {
 	background-color: #fff4ea;
 
 	color: #72420e;
+
+	border: 1.5px solid #72420e;
 }
 
 .upvote {
